# mendel

./: .gitignore  README.rst  app.py  pyproject.toml  requirements.txt  run_local.py  testing_code.ipynb
config/: config.py
controller/: controller.py
exceptions/: exceptions.py
mendel/: app.py
mendel/config/: config.py
models/: api.py  genetic.py  objective.py
tests/: test_genetic.py  test_mendel.py
