[tool.poetry]
name = "mendel"
version = "0.1.0"
description = "Genetic Algorithm for Python."
authors = ["pratheeshraniprakash <pratheeshraniprakash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
